<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="@string/menu_submenu">
        <menu>
            <item
                android:id="@+id/nav_bancos"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_bancos" />
            <item
                android:id="@+id/nav_estados"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_estados" />
            <item
                android:id="@+id/nav_gastos_fijos"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_gastos_fijos" />
            <item
                android:id="@+id/nav_gastos_periodicos"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_gastos_periodicos" />
            <item
                android:id="@+id/nav_ingresos_fijos"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_ingresos_fijos" />
            <item
                android:id="@+id/nav_ingresos_extras"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_ingresos_extras" />
        </menu>
    </item>

</menu>
